# Fibonacci-Nim

./: CMakeLists.txt
Fibonacci Nim/: main.c  next_turn.c
inc/: next_turn.h
src/: next_turn.c
tests/: CMakeLists.txt  test.c
